--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.24",
+    "@types/styled-components": "^5.1.25",
     "json-server": "^0.17.0"
   }
 }
